# IT_TestTask

./: CMakeLists.txt  build.sh
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/lib/: testLib.cpp  testLib.hpp
src/prog1/: prog1.cpp
src/prog2/: prog2.cpp
